# PSL-SCORE-PREDICTOR--END-TO-END-MLOPS-PROJECT

./: .gitignore  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  data.dvc  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
config/: config.py
logs/: .gitkeep
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  score_prediction.ipynb
src/: __init__.py
src/connections/: s3_connection.py
src/data/: load_data.py
src/exception/: __init__.py
src/features/: feature_engineering.py
src/models/: train_model.py
src/utils/: logger.py
tests/: test_data.py  test_models.py
