[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psl-score-predictor"
version = "0.1.0"
description = "PSL Score Predictor - End-to-End MLOps Project"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["machine-learning", "data-science", "psl", "cricket", "prediction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "jupyter>=1.0.0",
    "ipython>=7.0.0",
    "catboost>=1.0.0",
    "xgboost>=1.5.0",
    "mlflow==2.15.0",
    "dagshub==0.3.34",
    "dvc==3.53.0",
    "dvc-s3==3.2.0",
    "boto3==1.34.131",
    "botocore",
    "s3fs==2024.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/yourusername/PSL-SCORE-PREDICTOR"
Repository = "https://github.com/yourusername/PSL-SCORE-PREDICTOR.git"
Issues = "https://github.com/yourusername/PSL-SCORE-PREDICTOR/issues"
Changelog = "https://github.com/yourusername/PSL-SCORE-PREDICTOR/blob/main/CHANGELOG.md"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
